test/types/sync/vass/ref-sync-2.good
ref-sync-2.chpl:22: warning: fun1 sync
ref-sync-2.chpl:23: warning: fun1 single
ref-sync-2.chpl:24: warning: fun2 sync
ref-sync-2.chpl:25: warning: fun3 single
ref-sync-2.chpl:27: error: done
